# VitaControl

./: .gitignore  CHANGES_SUMMARY.md  CMakeLists.txt  DEBUGGING_GUIDE.md  README.md
lite2-mapper-vpk/: CMakeLists.txt
lite2-mapper-vpk/common/: debugScreen.h
lite2-mapper-vpk/src/: main.c
src/: controller.cpp  controller.h  main.cpp  vitacontrol_filelog.h
src/controllers/: eightbitdo_lite2_controller.cpp  eightbitdo_lite2_controller.h  switch_pro_controller.cpp  switch_pro_controller.h
vitacontrol-mapper/common/: debugScreen_custom.h
